test/compare/sources/errors/bad-switch2.go
// errcmp

package main

func main() {
	switch interface{}(0).(type) {
		case 1:
	}
}
